--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div>
       <div>
         шапка
-        <p>+7 (343) 434-34-34</p>
+        <p class="no-select">+7 (343) 434-34-34</p>
       </div>
       <input />
       <div>Hello some text</div>
