--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div>
       <div>
         шапка
-        <p class="no-select">+7 (343) 434-34-34</p>
+        <div class="no-select">+7 (343) 434-34-34</div>
       </div>
       <input />
       <div>Hello some text</div>
