--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="telephone=no" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div>
       <div>
         шапка
-        <div class="no-select">+7&nbsp;(343)&nbsp;434-34-34</div>
+        <div class="no-select">+7(343)434-34-34</div>
       </div>
       <input />
       <div>Hello some text</div>
+      <div>
+        <a href="tel:+7(343)434-34-34">+7(343)434-34-34</a>
+      </div>
     </div>
   </body>
 </html>
