--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div>
       <div>
         шапка
-        <div class="no-select">+7(343)434-34-34</div>
+        <p class="no-select">+7(343)434-34-34</p>
       </div>
       <input />
+      <p class="no-select">ocdfjj@ndf.dfd</p>
       <div>Hello some text</div>
       <div>
         <a href="tel:+7(343)434-34-34">+7(343)434-34-34</a>
