--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div>
       <div>
         шапка
-        <p class="no-select">+7 (343) 434-34-34</p>
+        <p >+7 (343) 434-34-34</p>
       </div>
       <input />
-      <p class="no-select">ocdfjj@ndf.dfd</p>
+      <p >ocdfjj@ndf.dfd</p>
       <div>Hello some text</div>
       <div>
         <a href="tel:+7(343)434-34-34">+7 (343) 434-34-34</a>
