--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <div>
       <div>
         шапка
-        <p >+7 (343) 434-34-34</p>
+        <p>+7 (343) 434-34-34</p>
       </div>
       <input />
-      <p >ocdfjj@ndf.dfd</p>
+      <p>ocdfjj@ndf.dfd</p>
       <div>Hello some text</div>
       <div>
         <a href="tel:+7(343)434-34-34">+7 (343) 434-34-34</a>
+      </div>
+      <div>
+        <a href="mailto:jsdnfj@ndjkfn.df">jsdnfj@ndjkfn.df</a>
       </div>
     </div>
   </body>
